create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -2144,14 +2144,14 @@ pre {
   }
 }
 .cid-qAWABZb8rw {
-  background-image: url("../../../assets/images/105.gif");
+  background-image: url("../../../assets/images/500-1920x1080.jpg");
 }
 .cid-qAWABZb8rw H1 {
-  color: #f7ed4a;
+  color: #11bee1;
 }
 .cid-qAWABZb8rw .mbr-text,
 .cid-qAWABZb8rw .mbr-section-btn {
-  color: #000000;
+  color: #ffffff;
 }
 .cid-qAWDnpSKOm {
   padding-top: 90px;
